@@ -4,6 +4,8 @@ va-arg-23.c from the execute part of the gcc torture tests.
 
 #include <testfwk.h>
 
+#pragma disable_warning 85
+
 /* PR 9700 */
 /* Alpha got the base address for the va_list incorrect when there was
    a structure that was passed partially in registers and partially on
@@ -12,7 +14,9 @@ va-arg-23.c from the execute part of the gcc torture tests.
 #include <stdarg.h>
 
 struct two { long x, y; };
-#if 0 // TODO: Enable when SDCC can pass struct
+
+#if !defined(__SDCC_mcs51) && !defined(__SDCC_ds390) && !defined(__SDCC_mos6502) && !defined(__SDCC_hc08) && !defined(__SDCC_s08) && \
+  (!defined(__SDCC_pdk14) && !defined(__SDCC_pdk15) || defined(__SDCC_STACK_AUTO)) // Todo: enable when struct parmeters are supported!
 void foo(int a, int b, int c, int d, int e, struct two f, int g, ...)
 {
   va_list args;
@@ -24,10 +28,12 @@ void foo(int a, int b, int c, int d, int e, struct two f, int g, ...)
     ASSERT (0);
 }
 #endif
+
 void
 testTortureExecute (void)
 {
-#if 0
+#if !defined(__SDCC_mcs51) && !defined(__SDCC_ds390) && !defined(__SDCC_mos6502) && !defined(__SDCC_hc08) && !defined(__SDCC_s08) && \
+  (!defined(__SDCC_pdk14) && !defined(__SDCC_pdk15) || defined(__SDCC_STACK_AUTO)) // Todo: enable when struct parmeters are supported!
   struct two t = { 0, 0 };
   foo(0, 0, 0, 0, 0, t, 1, 2);
   return;
